finally figured out #intro styling error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section id="intro">
             <div class="intro-header">Hi there!</div>
             <div class="intro-text">My name's Nick, and this is my gallery.  I'm a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  As an exercise in front-end web design, I decided to write a simple website to show some of them off!  Check out the different sections below.</div>
-            <div class="intro-image"><img src="./assets/wqC_20190312_144834.jpg" alt=""></div>
+            <div class="intro-image"><img src="./assets/wqC_20190312_144834.jpg" alt="intro image"></div>
         </section>
         <section id="gallery">
             <div class="gallery-img"><a href="./food.html" title="food photos"><img src="./assets/wqC_20200721_123237.jpg" alt="" class="section-image"></a></div>
@@ -40,11 +40,12 @@
                 <tr>
                     <td>Camera</td>
                     <td>Sony a6300</td>
-                    <td>My first camera!</td>
+                    <td>My first camera!  The a6300 is an APS-C mirrorless with a compact body.</td>
                 </tr>
                 <tr>
                     <td>Camera</td>
                     <td>Sony a7 IV</td>
+                    <td>I upgraded to the a7 IV after several years learning on the a6300.  This is a full frame mirrorless.</td>
                 </tr>
                 <tr>
                     <td>Lens</td>
