Accidentally discarded some changes...

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="std-text">
             <div>Top</div>
             <div>Flowers</div>
             <div>Fireworks</div>
@@ -18,8 +18,8 @@
     </header>
     <main>
         <section id="intro">
-            <div class="intro-header">Hi there!</div>
-            <div class="intro-text">My name's Nick, and this is my gallery.  I'm a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  As an exercise in front-end web design, I decided to write a simple website to show some of them off!  Check out the different sections below.</div>
+            <div class="intro-header h2-text">Hi there!</div>
+            <div class="intro-text std-text">My name's Nick, and this is my gallery.  I'm a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  As an exercise in front-end web design, I decided to write a simple website to show some of them off!  Check out the different sections below.</div>
             <div class="intro-image"><img src="./assets/wqC_20190312_144834.jpg" alt="intro image"></div>
         </section>
         <section id="gallery">
@@ -50,12 +50,18 @@
                 <tr>
                     <td>Lens</td>
                     <td>Sony E 16-50mm f/3.5-5.6</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Lens</td>
+                    <td>Sony FE 90mm f/2.8</td>
+                    <td>A stellar macro lens!  The optical quality is outstanding.</td>
                 </tr>
             </table>
         </section>
     </main>
-    <footer>
-        Copyright Nick Carmon
+    <footer class="std-text">
+        <span>Copyright Nick Carmon</span>
     </footer>    
 </body>
 </html>
