Revised page structure an changed featured photos

--- a/index.html
+++ b/index.html
@@ -5,28 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Nick's Photo Gallery</title>
+    <title>Nick's Website</title>
 </head>
 <body>
     <header>
         <nav class="std-text">
             <div>Top</div>
-            <div>Flowers</div>
-            <div>Fireworks</div>
-            <div>Food</div>
+            <div>Contact</div>
         </nav>
     </header>
     <main>
+        <h1>Nick's Website</h1>
         <section id="intro">
-            <div class="intro-header h2-text">Hi there!</div>
-            <div class="intro-text std-text">My name's Nick, and this is my gallery.  I'm a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  As an exercise in front-end web design, I decided to write a simple website to show some of them off!  Check out the different sections below.</div>
+            <h4 class="intro-header h4-text">Hi there!</h4>
+            <div class="intro-text std-text">My name's Nick, and this is my website.  It's a work in progress, which I'm creating and maintaining as an exercise in web design.  Right now I live in Japan, working in the public sector.  <br><br> However, I'm also a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  Below, you can see a sample of them, as well as links to see more.</div>
             <div class="intro-image"><img src="./assets/wqC_20190312_144834.jpg" alt="intro image"></div>
         </section>
-        <section id="gallery">
-            <div class="gallery-img"><a href="./food.html" title="food photos"><img src="./assets/wqC_20200721_123237.jpg" alt="" class="section-image"></a></div>
-            <div class="gallery-img"><a href=""><img src="./assets/wqC_20190315_145209.jpg" alt=""></a></div>
-            <div class="gallery-img"><a href=""><img src="./assets/wqC_20190521_124738.jpg" alt=""></a></div>
-            <div class="gallery-img"><a href=""><img src="./assets/wqC_20211025_122633.jpg" alt=""></a></div>
+        <section>
+            <h3>Photo Gallery</h3>
+            <div id="gallery">
+                <div class="gallery-img"><a href="./food.html" title="food photos"><img src="./assets/wqC_20200721_123237.jpg" alt=""></a></div>
+                <div class="gallery-img"><a href=""><img src="./assets/wqC_20211025_122633.jpg" alt=""></a></div>
+                <div class="gallery-img"><a href=""><img src="./assets/wqC_20200622_135220.jpg" alt=""></a></div>
+                <div class="gallery-img"><a href=""><img src="./assets/wqC_20220625_140811.jpg" alt=""></a></div>
+            </div>
         </section>
         <section id="gear">
             <div>Gear</div>
