Began work on dark mode button

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
     </main>
     <footer class="std-text">
-        <span>Copyright Nick Carmon</span>
+        <span id="dark-mode">Dark Mode</span><span>Copyright Nick Carmon</span>
     </footer>    
 </body>
 </html>
