--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
     <footer class="std-text">
         <span id="dark-mode">Dark Mode</span><span>Copyright Nick Carmon</span>
     </footer>    
+<script src="./script.js"></script>
 </body>
 </html>
