Filled in some alt attributes

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <section>
             <h3>Photo Gallery</h3>
             <div id="gallery">
-                <div class="gallery-img"><a href="./food.html" title="food photos"><img src="./assets/wqC_20200721_123237.jpg" alt=""></a></div>
-                <div class="gallery-img"><a href=""><img src="./assets/wqC_20211025_122633.jpg" alt=""></a></div>
-                <div class="gallery-img"><a href=""><img src="./assets/wqC_20200622_135220.jpg" alt=""></a></div>
-                <div class="gallery-img"><a href=""><img src="./assets/wqC_20220625_140811.jpg" alt=""></a></div>
+                <div class="gallery-img"><a href="./food.html" title="food photos"><img src="./assets/wqC_20200721_123237.jpg" alt="curry rice"></a></div>
+                <div class="gallery-img"><a href=""><img src="./assets/wqC_20211025_122633.jpg" alt="autumn waterway"></a></div>
+                <div class="gallery-img"><a href=""><img src="./assets/wqC_20200622_135220.jpg" alt="pollen flower"></a></div>
+                <div class="gallery-img"><a href=""><img src="./assets/wqC_20220625_140811.jpg" alt="white rose"></a></div>
             </div>
         </section>
         <section id="gear">
