Started on contact page

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <header>
-        <nav class="std-text">
-            <div>Top</div>
-            <div>Contact</div>
+        <nav class="doc-text">
+            <div><a href="./index.html">Top</a></div>
+            <div><a href="./contact.html">Contact</a></div>
         </nav>
     </header>
     <main>
-        <h1>Nick's Website</h1>
+        <h1 class="doc-text">Nick's Website</h1>
         <section id="intro">
-            <h4 class="intro-header h4-text">Hi there!</h4>
-            <div class="intro-text std-text">My name's Nick, and this is my website.  It's a work in progress, which I'm creating and maintaining as an exercise in web design.  Right now I live in Japan, working in the public sector.  <br><br> However, I'm also a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  Below, you can see a sample of them, as well as links to see more.</div>
+            <h4 class="intro-header doc-text">Hi there!</h4>
+            <p class="intro-text doc-text">My name's Nick, and this is my website.  It's a work in progress, which I'm creating and maintaining as an exercise in web design.  Right now I live in Japan, working in the public sector.  <br><br> However, I'm also a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  Below, you can see a sample of them, as well as links to see more.</p>
             <div class="intro-image"><img src="./assets/wqC_20190312_144834.jpg" alt="intro image"></div>
         </section>
         <section>
-            <h3>Photo Gallery</h3>
+            <h3 class="doc-text">Photo Gallery</h3>
             <div id="gallery">
                 <div class="gallery-img"><a href="./food.html" title="food photos"><img src="./assets/wqC_20200721_123237.jpg" alt="curry rice"></a></div>
                 <div class="gallery-img"><a href=""><img src="./assets/wqC_20211025_122633.jpg" alt="autumn waterway"></a></div>
@@ -62,8 +62,9 @@
             </table>
         </section>
     </main>
-    <footer class="std-text">
-        <span id="dark-mode">Dark Mode</span><span>Copyright Nick Carmon</span>
+    <footer>
+        <span id="dark-mode" class="doc-text">Dark Mode</span>
+        <span class="doc-text">Copyright Nick Carmon</span>
     </footer>    
 <script src="./script.js"></script>
 </body>
