Add border to table and styling to Gear title

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
         </section>
         <section id="gear">
-            <div>Gear</div>
-            <div>Want to know what I shoot with? Here's a roster of gear I use.</div>
+            <h3 class="doc-text">Gear</h3>
+            <div class="doc-text">Want to know what I shoot with? Here's a roster of gear I use.</div>
             <table>
                 <tr>
                     <th>Gear Type</th>
