Add dedicated gallery page and move gear table to it

--- a/index.html
+++ b/index.html
@@ -1,71 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Nick's Website</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./css/style.css">
+	<title>Nick's Website</title>
 </head>
 <body>
-    <header>
-        <nav class="doc-text">
-            <div><a href="./index.html">Top</a></div>
-            <div><a href="./contact.html">Contact</a></div>
-        </nav>
-    </header>
-    <main>
-        <h1 class="doc-text">Nick's Website</h1>
-        <section id="intro">
-            <h4 class="intro-header doc-text">Hi there!</h4>
-            <p class="intro-text doc-text">My name's Nick, and this is my website.  It's a work in progress, which I'm creating and maintaining as an exercise in web design.  Right now I live in Japan, working in the public sector.  <br><br> However, I'm also a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  Below, you can see a sample of them, as well as links to see more.</p>
-            <div class="intro-image"><img src="./assets/wqC_20190312_144834.jpg" alt="intro image"></div>
-        </section>
-        <section>
-            <h3 class="doc-text">Photo Gallery</h3>
-            <div id="gallery">
-                <div class="gallery-img"><a href="./food.html" title="food photos"><img src="./assets/wqC_20200721_123237.jpg" alt="curry rice"></a></div>
-                <div class="gallery-img"><a href=""><img src="./assets/wqC_20211025_122633.jpg" alt="autumn waterway"></a></div>
-                <div class="gallery-img"><a href=""><img src="./assets/wqC_20200622_135220.jpg" alt="pollen flower"></a></div>
-                <div class="gallery-img"><a href=""><img src="./assets/wqC_20220625_140811.jpg" alt="white rose"></a></div>
-            </div>
-        </section>
-        <section id="gear">
-            <h3 class="doc-text">Gear</h3>
-            <div class="doc-text">Want to know what I shoot with? Here's a roster of gear I use.</div>
-            <table>
-                <tr>
-                    <th>Gear Type</th>
-                    <th>Gear Name</th>
-                    <th>Remarks</th>
-                </tr>
-                <tr>
-                    <td>Camera</td>
-                    <td>Sony a6300</td>
-                    <td>My first camera!  The a6300 is an APS-C mirrorless with a compact body.</td>
-                </tr>
-                <tr>
-                    <td>Camera</td>
-                    <td>Sony a7 IV</td>
-                    <td>I upgraded to the a7 IV after several years learning on the a6300.  This is a full frame mirrorless.</td>
-                </tr>
-                <tr>
-                    <td>Lens</td>
-                    <td>Sony E 16-50mm f/3.5-5.6</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Lens</td>
-                    <td>Sony FE 90mm f/2.8</td>
-                    <td>A stellar macro lens!  The optical quality is outstanding.</td>
-                </tr>
-            </table>
-        </section>
-    </main>
-    <footer>
-        <span id="dark-mode" class="doc-text">Dark Mode</span>
-        <span class="doc-text">Copyright Nick Carmon</span>
-    </footer>    
+	<header>
+		<nav class="doc-text">
+			<div><a href="./index.html">Top</a></div>
+			<div><a href="./gallery.html">Photography</a></div>
+			<div><a href="./contact.html">Contact</a></div>
+		</nav>
+	</header>
+	<main>
+		<h1 class="doc-text">Nick's Website</h1>
+		<section id="intro">
+			<h4 class="intro-header doc-text">Hi there!</h4>
+			<p class="intro-text doc-text">My name's Nick, and this is my website.  It's a work in progress, which I'm creating and maintaining as an exercise in web design.  Right now I live in Japan, working in the public sector.  <br><br> However, I'm also a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  Below, you can see a sample of them, as well as links to see more.</p>
+			<div class="intro-image"><img src="./assets/wqC_20190312_144834.jpg" alt="intro image"></div>
+		</section>
+		<section>
+			<h3 class="doc-text">Photo Gallery</h3>
+			<div id="gallery">
+				<div class="gallery-img"><a href="./food.html" title="food photos"><img src="./assets/wqC_20200721_123237.jpg" alt="curry rice"></a></div>
+				<div class="gallery-img"><a href=""><img src="./assets/wqC_20211025_122633.jpg" alt="autumn waterway"></a></div>
+				<div class="gallery-img"><a href=""><img src="./assets/wqC_20200622_135220.jpg" alt="pollen flower"></a></div>
+				<div class="gallery-img"><a href=""><img src="./assets/wqC_20220625_140811.jpg" alt="white rose"></a></div>
+			</div>
+		</section>
+	</main>
+	<footer>
+		<span id="dark-mode" class="doc-text">Dark Mode</span>
+		<span class="doc-text">Copyright Nick Carmon</span>
+	</footer>    
 <script src="./script.js"></script>
 </body>
 </html>
