--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <header>
         <nav class="doc-text">
             <div><a href="./index.html">Top</a></div>
+            <div><a href="./gallery.html">Photography</a></div>
             <div><a href="./contact.html">Contact</a></div>
         </nav>
     </header>
