--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
 				<img src="./assets/wqC_20230112_132058.jpg" alt="">
 				<img src="./assets/wqC_20221029_085802.jpg" alt="">
 				<img src="./assets/wqC_20221025_141350.jpg" alt="">
-				<img src="./assets/wqC_20221016_112738.jpg" alt="">
+				<img src="./assets/wqC_20221016_112738.jpg" alt="" class="long-grid-img">
 				<img src="./assets/wqC_20221016_112355.jpg" alt="">
 				<img src="./assets/wqC_20221016_110759.jpg" alt="">
 				<img src="./assets/wqC_20221016_104705.jpg" alt="">
@@ -31,8 +31,8 @@
 				<img src="./assets/wqC_20221016_103225.jpg" alt="">
 				<img src="./assets/wqC_20221016_102611.jpg" alt="">
 				<img src="./assets/wqC_20221016_095848.jpg" alt="">
-				<img src="./assets/wqC_20221016_095800.jpg" alt="">
-				<img src="./assets/wqC_20221016_095737.jpg" alt="">
+				<img src="./assets/wqC_20221016_095800.jpg" alt="" class="long-grid-img">
+				<img src="./assets/wqC_20221016_095737.jpg" alt="" class="long-grid-img">
 				<img src="./assets/wqC_20220830_200857.jpg" alt="">
 				<img src="./assets/wqC_20220625_140811.jpg" alt="">
 				<img src="./assets/wqC_20220625_134514.jpg" alt="">
@@ -41,12 +41,11 @@
 				<img src="./assets/wqC_20200721_123237.jpg" alt="">
 				<img src="./assets/wqC_20200622_135220.jpg" alt="">
 				<img src="./assets/wqC_20190928_181219.jpg" alt="">
-				<img src="./assets/wqC_20190521_124738.jpg" alt="">
+				<img src="./assets/wqC_20190521_124738.jpg" alt="" class="long-grid-img">
 				<img src="./assets/wqC_20190423_124639.jpg" alt="">
 				<img src="./assets/wqC_20190423_122514.jpg" alt="">
 				<img src="./assets/wqC_20190315_145209.jpg" alt="">
 				<img src="./assets/wqC_20190312_144834.jpg" alt="">
-
 			</div>
 		</section>
 		<section id="gear">
