Resize contact form window

--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@
 	</main>
 	<footer>
 		<span id="dark-mode" class="doc-text">Dark Mode</span>
-		<span class="doc-text">Copyright Nick Carmon</span>
+		<span class="doc-text">Copyright 2023 Nick Carmon</span>
 	</footer>
 </body>
 </html>
