Add new sections to top page for skills and hobbies

--- a/contact.html
+++ b/contact.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Information</title>
-    <link rel="stylesheet" href="./css/style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Contact Information</title>
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="doc-text">
-            <div><a href="./index.html">Top</a></div>
-            <div><a href="./gallery.html">Photography</a></div>
-            <div><a href="./contact.html">Contact</a></div>
-        </nav>
-    </header>
-    <main>
-        <h1 class="doc-text">Contact Information</h1>
-        <section>
-            <h3 class="doc-text">Socials</h3>
-        </section>
-        <section id="contact-form">
-            <h3 class="doc-text">Contact Form</h3>
-            <form action="">
-                <label for="user-email" class="doc-text">Your E-Mail:</label>
-                <input type="text" id="user-email" name="user-email">
-                <br>
-                <label for="user-message" class="doc-text">Your Message:</label>
-                <textarea id="user-message" name="user-message" rows="5" cols="50"></textarea>
-                <br>
-                <input type="submit">
-            </form>
-        </section>
-    </main>
-    <footer>
-        <span id="dark-mode" class="doc-text">Dark Mode</span>
-        <span class="doc-text">Copyright 2023 Nick Carmon</span>
-    </footer>   
+	<header>
+		<nav class="doc-text">
+			<div><a href="./index.html">Top</a></div>
+			<div><a href="./gallery.html">Photography</a></div>
+			<div><a href="./contact.html">Contact</a></div>
+		</nav>
+	</header>
+	<main>
+		<h1 class="doc-text">Contact Information</h1>
+		<section class="doc-text">
+			<h3>Socials</h3>
+			<ul>
+				<li><a href="https://github.com/solo-nko">Github</a></li>
+			</ul>
+		</section>
+		<section id="contact-form">
+			<h3 class="doc-text">Contact Form</h3>
+			<form action="">
+				<label for="user-email" class="doc-text">Your E-Mail:</label>
+				<input type="text" id="user-email" name="user-email">
+				<br>
+				<label for="user-message" class="doc-text">Your Message:</label>
+				<textarea id="user-message" name="user-message" rows="5" cols="50"></textarea>
+				<br>
+				<input type="submit">
+			</form>
+		</section>
+	</main>
+	<footer>
+		<span id="dark-mode" class="doc-text">Dark Mode</span>
+		<span class="doc-text">Copyright 2023 Nick Carmon</span>
+	</footer>   
 </body>
 </html>
