--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
 			<p class="intro-text doc-text">My name's Nick, and this is my website.  It's a work in progress, which I'm creating and maintaining as an exercise in web design.  Right now I live in Japan, working in the public sector.  <br><br> However, I'm also a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  Below, you can see a sample of them, as well as links to see more.</p>
 			<div class="intro-image"><img src="./assets/wqC_20190312_144834.jpg" alt="intro image"></div>
 		</section>
+		<section id="skills">
+			<h3 class="doc-text">Skills</h3>
+		</section>
+		<section id="hobbies">
+			<h3 class="doc-text">Hobbies & Interests</h3>
+		</section>
 		<section>
 			<h3 class="doc-text">Photo Gallery</h3>
 			<div id="gallery">
 				<div class="gallery-img"><a href="./food.html" title="food photos"><img src="./assets/wqC_20200721_123237.jpg" alt="curry rice"></a></div>
-				<div class="gallery-img"><a href=""><img src="./assets/wqC_20211025_122633.jpg" alt="autumn waterway"></a></div>
-				<div class="gallery-img"><a href=""><img src="./assets/wqC_20200622_135220.jpg" alt="pollen flower"></a></div>
-				<div class="gallery-img"><a href=""><img src="./assets/wqC_20220625_140811.jpg" alt="white rose"></a></div>
+				<div class="gallery-img"><a href="./gallery.html"><img src="./assets/wqC_20211025_122633.jpg" alt="autumn waterway"></a></div>
+				<div class="gallery-img"><a href="./gallery.html"><img src="./assets/wqC_20200622_135220.jpg" alt="pollen flower"></a></div>
+				<div class="gallery-img"><a href="./gallery.html"><img src="./assets/wqC_20220625_140811.jpg" alt="white rose"></a></div>
 			</div>
 		</section>
 	</main>
