Resize table to align with other elements.  Add comments to organize style.css

--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
 		<section id="gear">
 			<h3 class="doc-text">Gear</h3>
 			<div class="doc-text">Want to know what I shoot with? Here's a roster of gear I use.</div>
-			<table>
+			<table id="gear-table">
 				<tr>
 					<th>Gear Type</th>
 					<th>Gear Name</th>
