--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,8 @@
 		</section>
 	</main>
 	<footer>
-		<span id="dark-mode" class="doc-text">Dark Mode</span>
+		<span id="dark-mode" class="doc-text button">Dark Mode</span>
+		<span id="light-mode" class="doc-text button">Light Mode</span>
 		<span class="doc-text">Copyright 2023 Nick Carmon</span>
 	</footer>   
 </body>
