--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
 		<section id="gear">
 			<h3 class="doc-text">Gear</h3>
 			<div class="doc-text">Want to know what I shoot with? Here's a roster of gear I use.</div>
-			<table id="gear-table">
+			<table id="gear-table" class="doc-text">
 				<tr>
 					<th>Gear Type</th>
 					<th>Gear Name</th>
@@ -81,8 +81,10 @@
 		</section>
 	</main>
 	<footer>
-		<span id="dark-mode" class="doc-text">Dark Mode</span>
+		<span id="dark-mode" class="doc-text button">Dark Mode</span>
+		<span id="light-mode" class="doc-text button">Light Mode</span>
 		<span class="doc-text">Copyright 2023 Nick Carmon</span>
 	</footer>
+	<script src="./script.js"></script>
 </body>
 </html>
