Revise palette, improve dark/light mode

--- a/gallery.html
+++ b/gallery.html
@@ -10,9 +10,9 @@
 <body>
 	 <header>
 		<nav class="doc-text">
-			<div><a href="./index.html">Top</a></div>
-			<div><a href="./gallery.html">Photography</a></div>
-			<div><a href="./contact.html">Contact</a></div>
+			<div><a class="nav-link button" href="./index.html">Top</a></div>
+			<div><a class="nav-link button" href="./gallery.html">Photography</a></div>
+			<div><a class="nav-link button" href="./contact.html">Contact</a></div>
 		</nav>
 	</header>
 	<main>
