--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
 <body>
 	<header>
 		<nav class="doc-text">
-			<div><a href="./index.html">Top</a></div>
-			<div><a href="./gallery.html">Photography</a></div>
-			<div><a href="./contact.html">Contact</a></div>
+			<div><a class="nav-link button" href="./index.html">Top</a></div>
+			<div><a class="nav-link button" href="./gallery.html">Photography</a></div>
+			<div><a class="nav-link button" href="./contact.html">Contact</a></div>
 		</nav>
 	</header>
 	<main>
@@ -40,6 +40,7 @@
 		<span id="dark-mode" class="doc-text button">Dark Mode</span>
 		<span id="light-mode" class="doc-text button">Light Mode</span>
 		<span class="doc-text">Copyright 2023 Nick Carmon</span>
-	</footer>   
+	</footer>
+	<script src="./script.js"></script>
 </body>
 </html>
