Update photography gear table

--- a/gallery.html
+++ b/gallery.html
@@ -60,22 +60,42 @@
 				<tr>
 					<td>Camera</td>
 					<td>Sony a6300</td>
-					<td>My first camera!  The a6300 is an APS-C mirrorless with a compact body.</td>
+					<td>My first camera! The a6300 is an APS-C mirrorless with a compact body and built-in flash.  Despite the smaller sensor, it's a seriously capable camera that can take professional-quality photos.</td>
 				</tr>
 				<tr>
 					<td>Camera</td>
 					<td>Sony a7 IV</td>
-					<td>I upgraded to the a7 IV after several years learning on the a6300.  This is a full frame mirrorless.</td>
+					<td>I upgraded to the a7 IV after several years learning on the a6300. This is a full frame mirrorless, and so far has exceled in every area I want it to, from customizability to optical quality.</td>
 				</tr>
 				<tr>
 					<td>Lens</td>
 					<td>Sony E 16-50mm f/3.5-5.6</td>
-					<td></td>
+					<td>The a6300's kit lens. While I wouldn't call it optically all that impressive, it is very compact for its focal length and functionality.</td>
+				</tr>
+				<tr>
+					<td>Lens</td>
+					<td>Sony E 18-200mm f/3.5-6.3</td>
+					<td>My default walk-around lens on APS-C. It has a small aperture on the long end, but its focal range is extremely handy, and it's fairly small and light for what it does.</td>
 				</tr>
 				<tr>
 					<td>Lens</td>
 					<td>Sony FE 90mm f/2.8</td>
-					<td>A stellar macro lens!  The optical quality is outstanding.</td>
+					<td>A stellar macro lens, which I use primarily for closeups and portraits.  Its optical quality is outstanding.</td>
+				</tr>
+				<tr>
+					<td>Lens</td>
+					<td>Tamron FE 28-200mm f/2.8-5.6</td>
+					<td>When in doubt on full frame, this is the lens I go with. It's large and heavy, but the extremely wide focal range and long reach are valuable.</td>
+				</tr>
+				<tr>
+					<td>Lens</td>
+					<td>Tamron FE 17-28mm f/2.8</td>
+					<td>A wide angle zoom lens to complement my 28-200mm.</td>
+				</tr>
+				<tr>
+					<td>Lens</td>
+					<td>Sony FE 14mm f/1.8</td>
+					<td>Fast and wide lens, well-suited to interiors and astrophotography. For its size and capabilities, it's fairly small and light.</td>
 				</tr>
 			</table>
 		</section>
