--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<header>
 		<nav class="doc-text">
 			<div><a class="nav-link button" href="./index.html">Top</a></div>
+			<div><a class="nav-link button" href="./programming.html">Development</a></div>
 			<div><a class="nav-link button" href="./gallery.html">Photography</a></div>
 			<div><a class="nav-link button" href="./contact.html">Contact</a></div>
 		</nav>
