Add dev portfolio examples

--- a/programming.html
+++ b/programming.html
@@ -20,9 +20,33 @@
       <h1 class="doc-text">Development Portfolio</h1>
       <section>
          <h3 class="doc-text">C++</h3>
+         <table class="doc-text">
+            <tr>
+               <th>Project</th>
+               <th>Description</th>
+            </tr>
+            <tr>
+               <td><a href="https://github.com/solo-nko/rockPaperScissorsCPP">Rock, Paper Scissors</a></td>
+               <td>A simple implementation of the game Rock, Paper Scissors in C++.</td>
+            </tr>
+         </table>
       </section>
       <section>
-         <h3 class="doc-text">Javascript</h3>
+         <h3 class="doc-text">JavaScript</h3>
+         <table class="doc-text">
+            <tr>
+               <th>Project</th>
+               <th>Description</th>
+            </tr>
+            <tr>
+               <td><a href="https://github.com/solo-nko/rockPaperScissorsJS">Rock, Paper Scissors</a></td>
+               <td>A simple implementation of the game Rock, Paper, Scissors in JavaScript. A cheat code is also included!</td>
+            </tr>
+            <tr>
+               <td><a href="https://github.com/solo-nko/mixedMessages">Mixed Messages</a></td>
+               <td>Generates random but grammatically correct sentences in English by respecting article usage.</td>
+            </tr>
+         </table>
       </section>
       <section></section>
       <footer>
