Improve dark mode

--- a/programming.html
+++ b/programming.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <main>
-      <header>
+      <header class="header-footer-theme">
          <nav class="doc-text">
             <div><a class="nav-link button" href="./index.html">Top</a></div>
             <div><a class="nav-link button" href="./programming.html">Development</a></div>
@@ -49,7 +49,7 @@
          </table>
       </section>
       <section></section>
-      <footer>
+      <footer class="header-footer-theme">
          <span id="dark-mode" class="doc-text button">Dark Mode</span>
          <span id="light-mode" class="doc-text button">Light Mode</span>
          <span class="doc-text">Copyright 2023 Nick Carmon</span>
