--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
 	 <title>Gallery</title>
 </head>
 <body>
-	 <header>
+	 <header class="header-footer-theme">
 		<nav class="doc-text">
 			<div><a class="nav-link button" href="./index.html">Top</a></div>
 			<div><a class="nav-link button" href="./programming.html">Development</a></div>
@@ -101,7 +101,7 @@
 			</table>
 		</section>
 	</main>
-	<footer>
+	<footer class="header-footer-theme">
 		<span id="dark-mode" class="doc-text button">Dark Mode</span>
 		<span id="light-mode" class="doc-text button">Light Mode</span>
 		<span class="doc-text">Copyright 2023 Nick Carmon</span>
