Improve dark mode

--- a/programming.html
+++ b/programming.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./css/style.css">
-   <title>Development Portfolio</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./css/style.css">
+	<title>Development Portfolio</title>
 </head>
 <body>
-   <main>
-      <header>
-         <nav class="doc-text">
-            <div><a class="nav-link button" href="./index.html">Top</a></div>
-            <div><a class="nav-link button" href="./programming.html">Development</a></div>
-            <div><a class="nav-link button" href="./gallery.html">Photography</a></div>
-            <div><a class="nav-link button" href="./contact.html">Contact</a></div>
-         </nav>
-      </header>
-      <h1 class="doc-text">Development Portfolio</h1>
-      <section>
-         <h2 class="doc-text">C++</h2>
-         <table class="doc-text">
-            <tr>
-               <th>Project</th>
-               <th>Description</th>
-            </tr>
-            <tr>
-               <td><a href="https://github.com/solo-nko/rockPaperScissorsCPP">Rock, Paper Scissors</a></td>
-               <td>A simple implementation of the game Rock, Paper Scissors in C++.</td>
-            </tr>
-         </table>
-      </section>
-      <section>
-         <h2 class="doc-text">JavaScript</h2>
-         <table class="doc-text">
-            <tr>
-               <th>Project</th>
-               <th>Description</th>
-            </tr>
-            <tr>
-               <td><a href="https://github.com/solo-nko/rockPaperScissorsJS">Rock, Paper Scissors</a></td>
-               <td>A simple implementation of the game Rock, Paper, Scissors in JavaScript. A cheat code is also included!</td>
-            </tr>
-            <tr>
-               <td><a href="https://github.com/solo-nko/mixedMessages">Mixed Messages</a></td>
-               <td>Generates random but grammatically correct sentences in English by respecting article usage.</td>
-            </tr>
-         </table>
-      </section>
-      <section></section>
-      <footer>
-         <span id="dark-mode" class="doc-text button">Dark Mode</span>
-         <span id="light-mode" class="doc-text button">Light Mode</span>
-         <span class="doc-text">Copyright 2023 Nick Carmon</span>
-      </footer>    
-   <script src="./script.js"></script>
-   </main>
-   
+	<main>
+		<header class="header-footer-theme">
+			<nav class="doc-text">
+				<div><a class="nav-link button" href="./index.html">Top</a></div>
+				<div><a class="nav-link button" href="./programming.html">Development</a></div>
+				<div><a class="nav-link button" href="./gallery.html">Photography</a></div>
+				<div><a class="nav-link button" href="./contact.html">Contact</a></div>
+			</nav>
+		</header>
+		<h1 class="doc-text">Development Portfolio</h1>
+		<section>
+			<h2 class="doc-text">C++</h2>
+			<table class="doc-text">
+				<tr>
+					<th>Project</th>
+					<th>Description</th>
+				</tr>
+				<tr>
+					<td><a href="https://github.com/solo-nko/rockPaperScissorsCPP">Rock, Paper Scissors</a></td>
+					<td>A simple implementation of the game Rock, Paper Scissors in C++.</td>
+				</tr>
+			</table>
+		</section>
+		<section>
+			<h2 class="doc-text">JavaScript</h2>
+			<table class="doc-text">
+				<tr>
+					<th>Project</th>
+					<th>Description</th>
+				</tr>
+				<tr>
+					<td><a href="https://github.com/solo-nko/rockPaperScissorsJS">Rock, Paper Scissors</a></td>
+					<td>A simple implementation of the game Rock, Paper, Scissors in JavaScript. A cheat code is also included!</td>
+				</tr>
+				<tr>
+					<td><a href="https://github.com/solo-nko/mixedMessages">Mixed Messages</a></td>
+					<td>Generates random but grammatically correct sentences in English by respecting article usage.</td>
+				</tr>
+			</table>
+		</section>
+		<section></section>
+		<footer class="header-footer-theme">
+			<span id="dark-mode" class="doc-text button">Dark Mode</span>
+			<span id="light-mode" class="doc-text button">Light Mode</span>
+			<span class="doc-text">Copyright 2023 Nick Carmon</span>
+		</footer>    
+	<script src="./script.js"></script>
+	</main>
+	
 </body>
 </html>
