Add alt text to images

--- a/gallery.html
+++ b/gallery.html
@@ -21,32 +21,32 @@
 		<section id="gallery-sect">
 			<h2 class="doc-text"></h2>
 			<div id="gallery">
-				<img src="./assets/wqC_20230112_132058.jpg" alt="">
-				<img src="./assets/wqC_20221029_085802.jpg" alt="">
-				<img src="./assets/wqC_20221025_141350.jpg" alt="">
-				<img src="./assets/wqC_20221016_112738.jpg" alt="" class="long-grid-img">
-				<img src="./assets/wqC_20221016_112355.jpg" alt="">
-				<img src="./assets/wqC_20221016_110759.jpg" alt="">
-				<img src="./assets/wqC_20221016_104705.jpg" alt="">
-				<img src="./assets/wqC_20221016_103350.jpg" alt="">
-				<img src="./assets/wqC_20221016_103225.jpg" alt="">
-				<img src="./assets/wqC_20221016_102611.jpg" alt="">
-				<img src="./assets/wqC_20221016_095848.jpg" alt="">
-				<img src="./assets/wqC_20221016_095800.jpg" alt="" class="long-grid-img">
-				<img src="./assets/wqC_20221016_095737.jpg" alt="" class="long-grid-img">
-				<img src="./assets/wqC_20220830_200857.jpg" alt="">
-				<img src="./assets/wqC_20220625_140811.jpg" alt="">
-				<img src="./assets/wqC_20220625_134514.jpg" alt="">
-				<img src="./assets/wqC_20220423_140539.jpg" alt="">
-				<img src="./assets/wqC_20211025_122633.jpg" alt="">
-				<img src="./assets/wqC_20200721_123237.jpg" alt="">
-				<img src="./assets/wqC_20200622_135220.jpg" alt="">
-				<img src="./assets/wqC_20190928_181219.jpg" alt="">
-				<img src="./assets/wqC_20190521_124738.jpg" alt="" class="long-grid-img">
-				<img src="./assets/wqC_20190423_124639.jpg" alt="">
-				<img src="./assets/wqC_20190423_122514.jpg" alt="">
-				<img src="./assets/wqC_20190315_145209.jpg" alt="">
-				<img src="./assets/wqC_20190312_144834.jpg" alt="">
+				<img src="./assets/wqC_20230112_132058.jpg" alt="hotel lobby">
+				<img src="./assets/wqC_20221029_085802.jpg" alt="autumn leaves">
+				<img src="./assets/wqC_20221025_141350.jpg" alt="red leaf canopy">
+				<img src="./assets/wqC_20221016_112738.jpg" alt="autumn waterway" class="long-grid-img">
+				<img src="./assets/wqC_20221016_112355.jpg" alt="falling water closeup">
+				<img src="./assets/wqC_20221016_110759.jpg" alt="fungi closeup">
+				<img src="./assets/wqC_20221016_104705.jpg" alt="autumn scenery">
+				<img src="./assets/wqC_20221016_103350.jpg" alt="autumn river gorge">
+				<img src="./assets/wqC_20221016_103225.jpg" alt="autumn river gorge">
+				<img src="./assets/wqC_20221016_102611.jpg" alt="river rocks">
+				<img src="./assets/wqC_20221016_095848.jpg" alt="autumn river aerial">
+				<img src="./assets/wqC_20221016_095800.jpg" alt="autumn river aerial" class="long-grid-img">
+				<img src="./assets/wqC_20221016_095737.jpg" alt="autumn river aerial" class="long-grid-img">
+				<img src="./assets/wqC_20220830_200857.jpg" alt="chicken ranch pizza">
+				<img src="./assets/wqC_20220625_140811.jpg" alt="white rose">
+				<img src="./assets/wqC_20220625_134514.jpg" alt="magenta roses">
+				<img src="./assets/wqC_20220423_140539.jpg" alt="sakura blossoms">
+				<img src="./assets/wqC_20211025_122633.jpg" alt="autumn waterway">
+				<img src="./assets/wqC_20200721_123237.jpg" alt="curry rice">
+				<img src="./assets/wqC_20200622_135220.jpg" alt="pollen flower">
+				<img src="./assets/wqC_20190928_181219.jpg" alt="grilling meat">
+				<img src="./assets/wqC_20190521_124738.jpg" alt="pork ramen" class="long-grid-img">
+				<img src="./assets/wqC_20190423_124639.jpg" alt="cheesecake with berry sauce">
+				<img src="./assets/wqC_20190423_122514.jpg" alt="hamburg steak">
+				<img src="./assets/wqC_20190315_145209.jpg" alt="strawberry pancakes">
+				<img src="./assets/wqC_20190312_144834.jpg" alt="cheeseburger and fries">
 			</div>
 		</section>
 		<section id="gear">
