--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<section id="intro">
 			<h3 class="intro-header doc-text">Hi there!</h3>
 			<p class="intro-text doc-text">My name's Nick, and this is my website.  It's a work in progress, which I'm creating and maintaining as an exercise in web design.  Right now I live in Japan, working in the public sector.  <br><br> However, I'm also a photographer by hobby, and I've accumulated a decent amount of photos over the years that I'm pretty proud of.  Below, you can see a sample of them, as well as links to see more.</p>
-			<div class="intro-image"><img src="./assets/wqC_20190417_204113.jpg" alt="intro image"></div>
+			<div class="intro-image"><img src="./assets/wqC_20190417_204113.jpg" alt="portrait of nicholas carmon"></div>
 		</section>
 		<section id="skills">
 			<h2 class="doc-text">Skills</h2>
@@ -54,7 +54,7 @@
 		<section>
 			<h2 class="doc-text">Photo Gallery</h2>
 			<div id="gallery">
-				<div class="gallery-img"><a href="./gallery.html" title="food photos"><img src="./assets/wqC_20200721_123237.jpg" alt="curry rice"></a></div>
+				<div class="gallery-img"><a href="./gallery.html"><img src="./assets/wqC_20200721_123237.jpg" alt="curry rice"></a></div>
 				<div class="gallery-img"><a href="./gallery.html"><img src="./assets/wqC_20211025_122633.jpg" alt="autumn waterway"></a></div>
 				<div class="gallery-img"><a href="./gallery.html"><img src="./assets/wqC_20200622_135220.jpg" alt="pollen flower"></a></div>
 				<div class="gallery-img"><a href="./gallery.html"><img src="./assets/wqC_20220625_140811.jpg" alt="white rose"></a></div>
