Add new Contact Info

--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,11 @@
 	<main>
 		<h1 class="doc-text">Contact Information</h1>
 		<section class="doc-text">
+			<p class="doc-text">Currently the contact form below doesn't have any functionality. It's just for show! If you want to reach out to me, you can do so using my social profile links instead.</p>
 			<h2>Socials</h2>
 			<ul>
 				<li><a href="https://github.com/solo-nko">Github</a></li>
+				<li><a href="www.linkedin.com/in/nkoc">LinkedIn</a></li>
 			</ul>
 		</section>
 		<section id="contact-form">
