Add RPSWebApp to portfolio

--- a/programming.html
+++ b/programming.html
@@ -39,8 +39,8 @@
 					<th>Description</th>
 				</tr>
 				<tr>
-					<td><a href="https://github.com/solo-nko/rockPaperScissorsJS">Rock, Paper Scissors</a></td>
-					<td>A simple implementation of the game Rock, Paper, Scissors in JavaScript. A cheat code is also included!</td>
+					<td><a href="https://github.com/solo-nko/rockPaperScissors-WebAppJS">Rock, Paper Scissors</a></td>
+					<td>A web app of the game Rock, Paper, Scissors, written in JavaScript with some simple CSS animations.</td>
 				</tr>
 				<tr>
 					<td><a href="https://github.com/solo-nko/mixedMessages">Mixed Messages</a></td>
